Add black formatter and format scripts

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -15,7 +15,8 @@
 				"ms-python.python", 
 				"ms-toolsai.jupyter",
 				"ms-toolsai.jupyter-keymap",
-				"ms-toolsai.vscode-jupyter-cell-tags"
+				"ms-toolsai.vscode-jupyter-cell-tags",
+				"ms-python.black-formatter"
 			]
 		}
 	},
